Ajuste em regex. Inclusão de dependencias de Swagger no POM

--- a/src/main/resources/contracts/validate-password.yaml
+++ b/src/main/resources/contracts/validate-password.yaml
@@ -15,7 +15,8 @@ paths:
     post:
       summary: validates a password
       operationId: validatePassword
-      description: validates a password based received in a String and returns an object containing its validity and potential validation errors
+      description: attempts to validate a password via Regex and returns a boolean for validity and a list of validation errros
+        found in the password
       consumes:
         - application/json
       produces:
@@ -23,12 +24,18 @@ paths:
       parameters:
         - in: body
           name: validatePasswordRequestModel
-          description: Password to validate
+          description: Object with the password to validate
           schema:
             $ref: '#/definitions/ValidatePasswordRequestModel'
       responses:
         200:
-          description: item created
+        description: Object containing a boolean for password validity and a list of validation errors.
+        content:
+          application/json:
+            schema:
+              type: object
+              items:
+                $ref: '#/definitions/ValidatePasswordResponseModel'
         400:
           description: invalid input, object invalid
 definitions:
