Inclusao de endpoint validate-only e respectivos testes e contrato

--- a/src/main/resources/contracts/validate-password.yaml
+++ b/src/main/resources/contracts/validate-password.yaml
@@ -11,12 +11,11 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 
 paths:
-  /v1/validate/password:
+  /v1/password/validate:
     post:
       summary: validates a password
       operationId: validatePassword
-      description: attempts to validate a password via Regex and returns a boolean for validity and a list of validation errros
-        found in the password
+      description: validated a password via Regex and returns a boolean true if valid, false if invalid and a list of validation errros
       consumes:
         - application/json
       produces:
@@ -36,6 +35,32 @@ paths:
               type: object
               items:
                 $ref: '#/definitions/ValidatePasswordResponseModel'
+        400:
+          description: invalid input, object invalid
+  /v1/password/validate-only:
+    post:
+      summary: validates a password
+      operationId: validatePassword
+      description: validates a password via Regex and returns a boolean true if valid, and false if not valid
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: validatePasswordRequestModel
+          description: Object with the password to validate
+          schema:
+            $ref: '#/definitions/ValidatePasswordRequestModel'
+      responses:
+        200:
+        description: A boolean true if the password is valid and false if not valid
+        content:
+          application/json:
+            properties:
+              isValid:
+                type: boolean
+                example: false
         400:
           description: invalid input, object invalid
 definitions:
